# MLOps-project-age-classification

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  faces.dvc  infer.py  pyproject.toml  requirements.txt  train.py
.dvc/: config
age-classification/: create_dataset.py  create_path_label_list.py  datasets.py  infer.py  network.py  train.py
age_classification/: .gitignore  create_dataset.py  create_path_label_list.py  data.csv.dvc  datasets.py  infer.py  model.pth.dvc  network.py  train.py
conf/: config.yaml
